--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <header class="sticky-top">
-        <nav class="navbar navbar-expand-md bg-light navbar-light">
+        <nav class="navbar navbar-expand-lg bg-light navbar-light">
             <div class="container-fluid">
                 <a href="#" class="img-fluid navbar-brand">
                     <img src="assets/images/websiteLogo.png" alt="logo" width="75" height="75">
-                    <span class="ml-2 d-none d-sm-inline">J. Grigoras Farms</span>
+                    <span class="ml-2">J. Grigoras Farms</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#produceNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
                     </div>    
                     <div class="">
                         <form action="" class="justify-content-center">
-                            <div class="form-group col-sm-4 mx-auto">
+                            <div class="form-group col-sm-8 col-lg-4 mx-auto">
                                 <select name="Seasons" id="seasonPicker" class="form-control">
                                     <option value="select">Select Season...</option>
                                     <option value="summer">Summer</option>
@@ -67,11 +67,10 @@
                     <h1 class="pt-2 pb-3">Our Story</h1>
                 </div>
                 <div class="col-11 col-lg-10 mx-auto">
-                    <p class="storyText text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                        laborum
+                    <p class="storyText text-sm-left text-center">For almost one-hundred years, the Grigoras family has been growing, cultivating, and sharing their quality produce. 
+                        It all started with a man - an immigrant from El Salvador - with a dream of putting down roots, both with his family and with his produce. James owned just a small plot of land and just a few corn seeds. With ambition, hard work, and the unrelenting support of his community, he was able to achieve that dream.
+                        Today, J. Grigoras Farms is the most well-renowned farm in the area and grows over 20 different types of fruits and vegetables. 
+                        
                     </p>
                 </div>
             </div>
@@ -81,24 +80,81 @@
                     <div class="col-xs-12 col-sm-6 col-md-4 px-5 cards">
                         <h3>Our Values</h3>
                         <svg class="ourIcon heart my-2" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heartbeat" class="svg-inline--fa fa-heartbeat fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M320.2 243.8l-49.7 99.4c-6 12.1-23.4 11.7-28.9-.6l-56.9-126.3-30 71.7H60.6l182.5 186.5c7.1 7.3 18.6 7.3 25.7 0L451.4 288H342.3l-22.1-44.2zM473.7 73.9l-2.4-2.5c-51.5-52.6-135.8-52.6-187.4 0L256 100l-27.9-28.5c-51.5-52.7-135.9-52.7-187.4 0l-2.4 2.4C-10.4 123.7-12.5 203 31 256h102.4l35.9-86.2c5.4-12.9 23.6-13.2 29.4-.4l58.2 129.3 49-97.9c5.9-11.8 22.7-11.8 28.6 0l27.6 55.2H481c43.5-53 41.4-132.3-7.3-182.1z"></path></svg>   
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut</p>
+                        <p class="font-italic">We value good quality products and the importance of family.</p>
                     </div>
 
                     <div class="col-xs-12 col-sm-6 col-md-4 px-5 mt-5 mt-sm-0 cards">
                         <h3>Our Pledge</h3>
                         <svg class="ourIcon hands my-2" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="hands-helping" class="svg-inline--fa fa-hands-helping fa-w-20" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="currentColor" d="M488 192H336v56c0 39.7-32.3 72-72 72s-72-32.3-72-72V126.4l-64.9 39C107.8 176.9 96 197.8 96 220.2v47.3l-80 46.2C.7 322.5-4.6 342.1 4.3 357.4l80 138.6c8.8 15.3 28.4 20.5 43.7 11.7L231.4 448H368c35.3 0 64-28.7 64-64h16c17.7 0 32-14.3 32-32v-64h8c13.3 0 24-10.7 24-24v-48c0-13.3-10.7-24-24-24zm147.7-37.4L555.7 16C546.9.7 527.3-4.5 512 4.3L408.6 64H306.4c-12 0-23.7 3.4-33.9 9.7L239 94.6c-9.4 5.8-15 16.1-15 27.1V248c0 22.1 17.9 40 40 40s40-17.9 40-40v-88h184c30.9 0 56 25.1 56 56v28.5l80-46.2c15.3-8.9 20.5-28.4 11.7-43.7z"></path></svg>    
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut</p>
+                        <p class="font-italic">To never serve our community products that we wouldn't serve to our families. </p>
                     </div>
 
                     <div class="col-sm-12 col-md-4 px-5 mt-5 mt-md-0 cards">
                         <h3>Our Mission</h3>
                         <svg class="ourIcon plant my-2" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="seedling" class="svg-inline--fa fa-seedling fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M64 96H0c0 123.7 100.3 224 224 224v144c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V320C288 196.3 187.7 96 64 96zm384-64c-84.2 0-157.4 46.5-195.7 115.2 27.7 30.2 48.2 66.9 59 107.6C424 243.1 512 147.9 512 32h-64z"></path></svg>  
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut</p>
+                        <p class="font-italic">To support the health, well-being, and the healing of our community through the highest quality produce. </p>
                     </div>
                 </div>
-                <hr width="400px" class="my-4">
+                <hr width="400px" class="my-5">
             </div>
     </main>
+
+    <div class="conatiner">
+        
+        <div class="contact-page">
+            <h1 class="contacthead text-center">Contact Us</h1>
+            <h3 class="contactsub text-center">Please fill out our contact form.</h1>
+        </div>
+        <div class="form1 mx-auto my-5">
+            <form>
+                <div>
+                    <div class="form-group">
+                        <label for="fullName">Full Name</label>
+                        <input class="form-control" type="text" name="fullName" id="fullName">
+                    </div>
+                    <div class="form-group">
+                        <label for="fullEmail">Email</label>
+                        <input class="form-control" type="email" name="fullEmail" id="fullEmail">
+                    </div>
+                    <div class="form-group ">
+                        <label for="subject">Subject</label>
+                        <select class="form-control" name="subject" id="subject">
+                            <option selected value="select">Select...</option>
+                            <option value="productRequest">Product Request</option>
+                            <option value="quote">Looking for a quote</option>
+                            <option value="complaints">Complaints</option>
+                            <option value="other">Other</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="messageArea">Message</label>
+                        <textarea class="form-control" id="messageArea" rows="8"></textarea>
+                    </div>
+                    <button type="submit" class="btn submitbtn text-white my-4">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+
+    <footer class="page-footer bg-white">
+        <div class="footer-copyright footer-social d-sm-flex py-2 text-center">
+            <div class="m-auto">
+                © 2020 Copyright: J. Grigoras Farms
+            </div>
+            <div class="mt-2 mx-auto">
+                <svg class="social-icon fb mx-2" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook" class="svg-inline--fa fa-facebook fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path></svg>
+                <?xml version="1.0" ?><svg class="social-icon ig mx-2" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><style type="text/css">
+                    .st0{fill:url(#SVGID_1_);}
+                    .st1{fill:url(#SVGID_2_);}
+                    .st2{fill:#654C9F;}
+                </style><g id="Edges"/><g id="Symbol"><g><radialGradient cx="56.3501" cy="19.2179" gradientTransform="matrix(0.9986 -5.233596e-02 4.448556e-02 0.8488 -36.9742 443.8014)" gradientUnits="userSpaceOnUse" id="SVGID_1_" r="711.335"><stop offset="0" style="stop-color:#FED576"/><stop offset="0.2634" style="stop-color:#F47133"/><stop offset="0.6091" style="stop-color:#BC3081"/><stop offset="1" style="stop-color:#4C63D2"/></radialGradient><path class="st0" d="M96.1,23.2c-16.2,6.3-29.9,14.7-43.6,28.4C38.8,65.2,30.4,79,24.1,95.1c-6.1,15.6-10.2,33.5-11.4,59.7    c-1.2,26.2-1.5,34.6-1.5,101.4s0.3,75.2,1.5,101.4c1.2,26.2,5.4,44.1,11.4,59.7c6.3,16.2,14.7,29.9,28.4,43.6    c13.7,13.7,27.4,22.1,43.6,28.4c15.6,6.1,33.5,10.2,59.7,11.4c26.2,1.2,34.6,1.5,101.4,1.5c66.8,0,75.2-0.3,101.4-1.5    c26.2-1.2,44.1-5.4,59.7-11.4c16.2-6.3,29.9-14.7,43.6-28.4c13.7-13.7,22.1-27.4,28.4-43.6c6.1-15.6,10.2-33.5,11.4-59.7    c1.2-26.2,1.5-34.6,1.5-101.4s-0.3-75.2-1.5-101.4c-1.2-26.2-5.4-44.1-11.4-59.7C484,79,475.6,65.2,462,51.6    c-13.7-13.7-27.4-22.1-43.6-28.4c-15.6-6.1-33.5-10.2-59.7-11.4c-26.2-1.2-34.6-1.5-101.4-1.5s-75.2,0.3-101.4,1.5    C129.6,12.9,111.7,17.1,96.1,23.2z M356.6,56c24,1.1,37,5.1,45.7,8.5c11.5,4.5,19.7,9.8,28.3,18.4c8.6,8.6,13.9,16.8,18.4,28.3    c3.4,8.7,7.4,21.7,8.5,45.7c1.2,25.9,1.4,33.7,1.4,99.4s-0.3,73.5-1.4,99.4c-1.1,24-5.1,37-8.5,45.7c-4.5,11.5-9.8,19.7-18.4,28.3    c-8.6,8.6-16.8,13.9-28.3,18.4c-8.7,3.4-21.7,7.4-45.7,8.5c-25.9,1.2-33.7,1.4-99.4,1.4s-73.5-0.3-99.4-1.4    c-24-1.1-37-5.1-45.7-8.5c-11.5-4.5-19.7-9.8-28.3-18.4c-8.6-8.6-13.9-16.8-18.4-28.3c-3.4-8.7-7.4-21.7-8.5-45.7    c-1.2-25.9-1.4-33.7-1.4-99.4s0.3-73.5,1.4-99.4c1.1-24,5.1-37,8.5-45.7c4.5-11.5,9.8-19.7,18.4-28.3c8.6-8.6,16.8-13.9,28.3-18.4    c8.7-3.4,21.7-7.4,45.7-8.5c25.9-1.2,33.7-1.4,99.4-1.4S330.7,54.8,356.6,56z"/><radialGradient cx="154.0732" cy="134.5501" gradientTransform="matrix(0.9986 -5.233596e-02 4.448556e-02 0.8488 -24.3617 253.2946)" gradientUnits="userSpaceOnUse" id="SVGID_2_" r="365.2801"><stop offset="0" style="stop-color:#FED576"/><stop offset="0.2634" style="stop-color:#F47133"/><stop offset="0.6091" style="stop-color:#BC3081"/><stop offset="1" style="stop-color:#4C63D2"/></radialGradient><path class="st1" d="M130.9,256.3c0,69.8,56.6,126.3,126.3,126.3s126.3-56.6,126.3-126.3S327,130,257.2,130    S130.9,186.5,130.9,256.3z M339.2,256.3c0,45.3-36.7,82-82,82s-82-36.7-82-82c0-45.3,36.7-82,82-82S339.2,211,339.2,256.3z"/><circle class="st2" cx="388.6" cy="125" r="29.5"/></g></g></svg>
+                <svg class="social-icon twit mx-2" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="twitter" class="svg-inline--fa fa-twitter fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"></path></svg>
+                <svg class="social-icon yt mx-2" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="youtube" class="svg-inline--fa fa-youtube fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"></path></svg>
+            </div>           
+        </div>    
+    </footer>
+
 
 
 
