added cards and pictures

--- a/index.html
+++ b/index.html
@@ -97,10 +97,25 @@
                 </div>
                 <hr width="400px" class="my-5">
             </div>
+
+            
+        <div class="container-fluid">
+            <div class="ourProduce text-center">
+                <h1 class="producehead">Our Produce</h1>
+                <p class="producesub">By Seasons</p>
+            </div>
+            <div class="producelist" id="produceList">
+                <div id="summerProduce"></div>
+                <div id="fallproduce"></div>
+                <div id="winterproduce"></div>
+                <div id="springproduce"></div>
+            </div>
+            <hr width="400px" class="my-5">
+        </div>
     </main>
 
+
     <div class="conatiner">
-        
         <div class="contact-page">
             <h1 class="contacthead text-center">Contact Us</h1>
             <h3 class="contactsub text-center">Please fill out our contact form.</h1>
@@ -135,7 +150,6 @@
             </form>
         </div>
     </div>
-
 
     <footer class="page-footer bg-white">
         <div class="footer-copyright footer-social d-sm-flex py-2 text-center">
@@ -173,5 +187,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
