--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="sticky-top">
-        <nav class="navbar navbar-expand-lg bg-light navbar-light">
+        <nav class="navbar navbar-expand-lg bg-light navbar-light ">
             <div class="container-fluid">
                 <a href="#" class="img-fluid navbar-brand">
                     <img src="assets/images/websiteLogo.png" alt="logo" width="75" height="75">
@@ -25,33 +25,44 @@
                         <li class="nav-item mx-4"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item mx-4"><a class="nav-link" href="#produce">Produce</a></li>
                         <li class="nav-item mx-4"><a class="nav-link" href="#contact">Contact</a></li>
-                        <li class="nav-item mx-4 login"><button class="btn btn-outline-danger loginbtn">Login</button></li>
+                        <li class="nav-item mx-4 login"><button data-toggle="modal" data-target="#loginModal" class="btn btn-outline-danger loginbtn">Login</button></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
 
-    <div class="container-fluid p-0">
-        <div class="jumbotron jumbotron-fluid">
-            <div class="">
-                <div class="col mx-auto text-center form">
-                    <div class="text-white">
-                        <h1 class="display-4">Seasonal Produce Guide</h1>
-                        <p class="lead my-4">Find out what's in season at our farms.</p>
-                    </div>    
-                    <div class="">
-                        <form action="" class="justify-content-center">
-                            <div class="form-group col-sm-8 col-lg-4 mx-auto">
-                                <select name="Seasons" id="seasonPicker" class="form-control">
-                                    <option value="select">Select Season...</option>
-                                    <option value="summer">Summer</option>
-                                    <option value="fall">Fall</option>
-                                    <option value="winter">Winter</option>
-                                    <option value="spring">Spring</option>
-                                </select>
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title">Login </h3>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <form>
+                            <div class="form-row">
+                                <div class="form-group col-12">
+                                    <label class="sr-only" for="loginEmail">Email address</label>
+                                    <input type="email" class="form-control form-control-sm" id="loginEmail" placeholder="Enter email">
+                                </div>
+                                <div class="form-group col-12">
+                                    <label class="sr-only" for="loginPassword">Password</label>
+                                    <input type="password" class="form-control form-control-sm" id="loginPassword" placeholder="Password">
+                                </div>
+                                <div class="col">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox">
+                                        <label class="form-check-label"> Remember me
+                                        </label>
+                                    </div>
+                                </div>
                             </div>
-                            <button type="submit" class="btn text-white mt-4 searchbtn">Find Produce</button>
+                            <div class="form-row">
+                                <button type="button" class="btn btn-outline-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary btn-outline-danger loginbtn btn-sm ml-1">Sign in</button>
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -59,8 +70,64 @@
         </div>
     </div>
 
+    <div class="container-fluid p-0" id="main">
+        <div class="jumbotron jumbotron-fluid">
+            <div class="row">
+                <div class="col mx-auto text-center form">
+                    <div class="text-white pb-3">
+                        <h1 class="display-4">Seasonal Produce Guide</h1>
+                        <h3 class="my-4">Find out what's in season at our farms.</h3>
+                        <p class="lead">Please pick desired season below.</p>
+                    </div>    
+                    <div class="row seasonlist">
+                        <div class="col-6 col-md-3">
+                            <div class="seasons">
+                                <div class="summer mx-auto">
+                                    <a class="js-seasons" href="#summerproduce">
+                                        <svg class="seasonsvg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="sun" class="svg-inline--fa fa-sun fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path class="sunpath" fill="currentColor" d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"></path></svg>
+                                        <div class="text-white icontext">Summer</div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <div class="seasons">
+                                <div class="fall mx-auto">
+                                    <a class="js-seasons" href="#fallproduce">
+                                        <svg class="seasonsvg" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="canadian-maple-leaf" class="svg-inline--fa fa-canadian-maple-leaf fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path class="fallpath" fill="currentColor" d="M383.8 351.7c2.5-2.5 105.2-92.4 105.2-92.4l-17.5-7.5c-10-4.9-7.4-11.5-5-17.4 2.4-7.6 20.1-67.3 20.1-67.3s-47.7 10-57.7 12.5c-7.5 2.4-10-2.5-12.5-7.5s-15-32.4-15-32.4-52.6 59.9-55.1 62.3c-10 7.5-20.1 0-17.6-10 0-10 27.6-129.6 27.6-129.6s-30.1 17.4-40.1 22.4c-7.5 5-12.6 5-17.6-5C293.5 72.3 255.9 0 255.9 0s-37.5 72.3-42.5 79.8c-5 10-10 10-17.6 5-10-5-40.1-22.4-40.1-22.4S183.3 182 183.3 192c2.5 10-7.5 17.5-17.6 10-2.5-2.5-55.1-62.3-55.1-62.3S98.1 167 95.6 172s-5 9.9-12.5 7.5C73 177 25.4 167 25.4 167s17.6 59.7 20.1 67.3c2.4 6 5 12.5-5 17.4L23 259.3s102.6 89.9 105.2 92.4c5.1 5 10 7.5 5.1 22.5-5.1 15-10.1 35.1-10.1 35.1s95.2-20.1 105.3-22.6c8.7-.9 18.3 2.5 18.3 12.5S241 512 241 512h30s-5.8-102.7-5.8-112.8 9.5-13.4 18.4-12.5c10 2.5 105.2 22.6 105.2 22.6s-5-20.1-10-35.1 0-17.5 5-22.5z"></path></svg>
+                                        <div class="text-white icontext">Fall</div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>    
+                        <div class="col-6 col-md-3">
+                            <div class="seasons">
+                                <div class="winter mx-auto">
+                                    <a class="js-seasons" href="#winterproduce">
+                                        <svg class="seasonsvg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="snowflake" class="svg-inline--fa fa-snowflake fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path class="winterpath" fill="currentColor" d="M440.3 345.2l-33.8-19.5 26-7c8.2-2.2 13.1-10.7 10.9-18.9l-4-14.9c-2.2-8.2-10.7-13.1-18.9-10.9l-70.8 19-63.9-37 63.8-36.9 70.8 19c8.2 2.2 16.7-2.7 18.9-10.9l4-14.9c2.2-8.2-2.7-16.7-10.9-18.9l-26-7 33.8-19.5c7.4-4.3 9.9-13.7 5.7-21.1L430.4 119c-4.3-7.4-13.7-9.9-21.1-5.7l-33.8 19.5 7-26c2.2-8.2-2.7-16.7-10.9-18.9l-14.9-4c-8.2-2.2-16.7 2.7-18.9 10.9l-19 70.8-62.8 36.2v-77.5l53.7-53.7c6.2-6.2 6.2-16.4 0-22.6l-11.3-11.3c-6.2-6.2-16.4-6.2-22.6 0L256 56.4V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v40.4l-19.7-19.7c-6.2-6.2-16.4-6.2-22.6 0L138.3 48c-6.3 6.2-6.3 16.4 0 22.6l53.7 53.7v77.5l-62.8-36.2-19-70.8c-2.2-8.2-10.7-13.1-18.9-10.9l-14.9 4c-8.2 2.2-13.1 10.7-10.9 18.9l7 26-33.8-19.5c-7.4-4.3-16.8-1.7-21.1 5.7L2.1 145.7c-4.3 7.4-1.7 16.8 5.7 21.1l33.8 19.5-26 7c-8.3 2.2-13.2 10.7-11 19l4 14.9c2.2 8.2 10.7 13.1 18.9 10.9l70.8-19 63.8 36.9-63.8 36.9-70.8-19c-8.2-2.2-16.7 2.7-18.9 10.9l-4 14.9c-2.2 8.2 2.7 16.7 10.9 18.9l26 7-33.8 19.6c-7.4 4.3-9.9 13.7-5.7 21.1l15.5 26.8c4.3 7.4 13.7 9.9 21.1 5.7l33.8-19.5-7 26c-2.2 8.2 2.7 16.7 10.9 18.9l14.9 4c8.2 2.2 16.7-2.7 18.9-10.9l19-70.8 62.8-36.2v77.5l-53.7 53.7c-6.3 6.2-6.3 16.4 0 22.6l11.3 11.3c6.2 6.2 16.4 6.2 22.6 0l19.7-19.7V496c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-40.4l19.7 19.7c6.2 6.2 16.4 6.2 22.6 0l11.3-11.3c6.2-6.2 6.2-16.4 0-22.6L256 387.7v-77.5l62.8 36.2 19 70.8c2.2 8.2 10.7 13.1 18.9 10.9l14.9-4c8.2-2.2 13.1-10.7 10.9-18.9l-7-26 33.8 19.5c7.4 4.3 16.8 1.7 21.1-5.7l15.5-26.8c4.3-7.3 1.8-16.8-5.6-21z"></path></svg>
+                                        <div class="text-white icontext">Winter</div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>    
+                        <div class="col-6 col-md-3">
+                            <div class="seasons">
+                                <div class="spring m-auto">
+                                    <a class="js-seasons" href="#springproduce">
+                                        <svg class="seasonsvg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="cloud-sun-rain" class="svg-inline--fa fa-cloud-sun-rain fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path class="springpath" fill="currentColor" d="M510.5 225.5c-6.9-37.2-39.3-65.5-78.5-65.5-12.3 0-23.9 3-34.3 8-17.4-24.1-45.6-40-77.7-40-53 0-96 43-96 96 0 .5.2 1.1.2 1.6C187.6 233 160 265.2 160 304c0 44.2 35.8 80 80 80h256c44.2 0 80-35.8 80-80 0-39.2-28.2-71.7-65.5-78.5zm-386.4 34.4c-37.4-37.4-37.4-98.3 0-135.8 34.6-34.6 89.1-36.8 126.7-7.4 20-12.9 43.6-20.7 69.2-20.7.7 0 1.3.2 2 .2l8.9-26.7c3.4-10.2-6.3-19.8-16.5-16.4l-75.3 25.1-35.5-71c-4.8-9.6-18.5-9.6-23.3 0l-35.5 71-75.3-25.1c-10.2-3.4-19.8 6.3-16.4 16.5l25.1 75.3-71 35.5c-9.6 4.8-9.6 18.5 0 23.3l71 35.5-25.1 75.3c-3.4 10.2 6.3 19.8 16.5 16.5l59.2-19.7c-.2-2.4-.7-4.7-.7-7.2 0-12.5 2.3-24.5 6.2-35.9-3.6-2.7-7.1-5.2-10.2-8.3zm69.8-58c4.3-24.5 15.8-46.4 31.9-64-9.8-6.2-21.4-9.9-33.8-9.9-35.3 0-64 28.7-64 64 0 18.7 8.2 35.4 21.1 47.1 11.3-15.9 26.6-28.9 44.8-37.2zm330.6 216.2c-7.6-4.3-17.4-1.8-21.8 6l-36.6 64c-4.4 7.7-1.7 17.4 6 21.8 2.5 1.4 5.2 2.1 7.9 2.1 5.5 0 10.9-2.9 13.9-8.1l36.6-64c4.3-7.7 1.7-17.4-6-21.8zm-96 0c-7.6-4.3-17.4-1.8-21.8 6l-36.6 64c-4.4 7.7-1.7 17.4 6 21.8 2.5 1.4 5.2 2.1 7.9 2.1 5.5 0 10.9-2.9 13.9-8.1l36.6-64c4.3-7.7 1.7-17.4-6-21.8zm-96 0c-7.6-4.3-17.4-1.8-21.8 6l-36.6 64c-4.4 7.7-1.7 17.4 6 21.8 2.5 1.4 5.2 2.1 7.9 2.1 5.5 0 10.9-2.9 13.9-8.1l36.6-64c4.3-7.7 1.7-17.4-6-21.8zm-96 0c-7.6-4.3-17.4-1.8-21.8 6l-36.6 64c-4.4 7.7-1.7 17.4 6 21.8 2.5 1.4 5.2 2.1 7.9 2.1 5.5 0 10.9-2.9 13.9-8.1l36.6-64c4.3-7.7 1.7-17.4-6-21.8z"></path></svg>
+                                        <div class="text-white icontext">Spring</div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>     
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <main>
-        <div class="container-fluid py-5">
+        <div id="about" class="container-fluid py-5">
             <div class="row text-center">
                 <div class="col-12 ourStory">
                     <h2 class="mt-4">HELLO!</h2>
@@ -95,27 +162,52 @@
                         <p class="font-italic">To support the health, well-being, and the healing of our community through the highest quality produce. </p>
                     </div>
                 </div>
-                <hr width="400px" class="my-5">
+                <hr width="400px" class="line">
             </div>
 
             
-        <div class="container-fluid">
+        <div id="produce" class="container-fluid pt-5">
             <div class="ourProduce text-center">
                 <h1 class="producehead">Our Produce</h1>
                 <p class="producesub">By Seasons</p>
             </div>
             <div class="producelist" id="produceList">
-                <div id="summerProduce"></div>
-                <div id="fallproduce"></div>
-                <div id="winterproduce"></div>
-                <div id="springproduce"></div>
+                <div>
+                    <div class="text-center text-md-left px-md-3 px-lg-5 mt-5">    
+                        <h1 class="font-italic seasonhead">Summer</h1>
+                        <p class="font-italic seasonsub">June-September</p>
+                    </div>
+                    <div class="row" id="summerproduce"></div> 
+                </div>
+                <div>
+                    <div class="text-center text-md-left px-md-3 px-lg-5 mt-5">    
+                        <h1 class="font-italic seasonhead">Fall</h1>
+                        <p class="font-italic seasonsub">September-December</p>
+                    </div>
+                    <div class="row" id="fallproduce"></div>
+                </div>
+                <div>
+                    <div class="text-center text-md-left px-md-3 px-lg-5 mt-5">    
+                        <h1 class="font-italic seasonhead">Winter</h1>
+                        <p class="font-italic seasonsub">December-March</p>
+                    </div>
+                    <div class="row" id="winterproduce"></div>
+                </div>
+                <div>
+                    <div class="text-center text-md-left px-md-3 px-lg-5 mt-5">    
+                        <h1 class="font-italic seasonhead">Spring</h1>
+                        <p class="font-italic seasonsub">March-June</p>
+                    </div>
+                    <div class="row" id="springproduce"></div>
+                </div>
+                
             </div>
-            <hr width="400px" class="my-5">
+            <hr width="400px" class="line">
         </div>
     </main>
 
 
-    <div class="conatiner">
+    <div id="contact" class="conatiner py-5">
         <div class="contact-page">
             <h1 class="contacthead text-center">Contact Us</h1>
             <h3 class="contactsub text-center">Please fill out our contact form.</h1>
@@ -145,10 +237,29 @@
                         <label for="messageArea">Message</label>
                         <textarea class="form-control" id="messageArea" rows="8"></textarea>
                     </div>
-                    <button type="submit" class="btn submitbtn text-white my-4">Submit</button>
+                    <button data-toggle="modal" data-target="#sentModal" type="button" class="btn submitbtn text-white my-4">Submit</button>
                 </div>
             </form>
         </div>
+    </div>
+
+    <div class="modal fade" id="sentModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <h3>Message Sent!</h3>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Okay!</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <footer class="page-footer bg-white">
