--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                         </div>
                         <div class="form-group ">
                             <label for="subject">Subject</label>
-                            <select class="form-control" name="subject" id="subject">
+                            <select class="form-control custom-select" name="subject" id="subject">
                                 <option selected value="select">Select...</option>
                                 <option value="productRequest">Product Request</option>
                                 <option value="quote">Looking for a quote</option>
