created dist folder

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,500i,600,600i,700&display=swap" rel="stylesheet">
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/main.css">
+    <!-- endbuild -->
     <title>J. Grigoras Farms  |  Seasonal Produce Guide</title>
 </head>
 <body>
@@ -275,9 +277,10 @@
         </footer>
     </div>
 
+    
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
 </body>
 </html>
